--- a/src/frontend/students.html
+++ b/src/frontend/students.html
@@ -5,23 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>School Portal</title>
-    <script src="/index.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
+  <div class="login">
   <body>
-    <header>
-      <h1>Students Login System</h1></header>
-    <form action="/registerStudents" method="post">
-      <h3>Students Registration</h3>
-      <label for="fname">First Name:</label>
-      <input type="text" id="fname" name="fname" /><br />
-      <label for="lname">Last Name</label>
-      <input type="text" id="lname" name="lname" /><br />
-      <label for="Cname">Class</label>
-      <input type="text" id="Cname" name="Cname" /><br />
-      <label for="Agname">Age</label>
-      <input type="number" id="Agname" name="Agname" /><br />
-      <input type="submit"> <br />
-    </form>
+      <header>
+        <h1>Students Login System</h1>
+      </header>
+      <form action="/registerStudents" method="post" class="regStudents">
+        <label for="fname">First Name:</label>
+        <input type="text" id="fname" name="fname" /><br />
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lname" /><br />
+        <label for="Cname">Class</label>
+        <input type="text" id="Cname" name="Cname" /><br />
+        <label for="Agname">Age</label>
+        <input type="number" id="Agname" name="Agname" /><br />
+        <button type="submit">Submit</button>
+      </form>
+      <div class="next">
+        <button onclick="window.location.href='index.html'">Back</button>
+    </div>
   </body>
+</div>
 </html>
