--- a/src/frontend/mainPanel.html
+++ b/src/frontend/mainPanel.html
@@ -101,6 +101,7 @@
                             <th>Rank</th>
                             <th>Username</th>
                             <th>State Of Origin</th>
+                            <th>Image</th>
                           </tr>
                         </thead>
                       </table>
@@ -160,6 +161,7 @@
               <td>${list.Rank}</td>
               <td>${list.Username}</td>
               <td>${list.StateOfOrigin}</td>
+              <td>${list.ImgLink}</td>
               </tr>`
                 )
                 .join(" ");
