--- a/src/frontend/students.html
+++ b/src/frontend/students.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <div class="login">
-  <body>
+    <body>
       <header>
         <h1>Students Login System</h1>
       </header>
@@ -21,11 +21,12 @@
         <input type="text" id="Cname" name="Cname" /><br />
         <label for="Agname">Age</label>
         <input type="number" id="Agname" name="Agname" /><br />
+        <input type="file" id="myFile" name="filename" />
         <button type="submit">Submit</button>
       </form>
       <div class="next">
         <button onclick="window.location.href='index.html'">Back</button>
-    </div>
-  </body>
-</div>
+      </div>
+    </body>
+  </div>
 </html>
