--- a/src/frontend/mainPanel.html
+++ b/src/frontend/mainPanel.html
@@ -24,7 +24,7 @@
                     <i class="fas fa-user"></i>  
                     <span class="nav-item">Profile</span>
                 </a></li>
-                <li><a href="#">
+                <li><a href="/totalStudents">
                     <i class="fas fa-chart-bar"></i>  
                     <span class="nav-item">Analytics</span>
                 </a></li>
@@ -54,13 +54,13 @@
                     <i class="fas fa-laptop-code"></i>
                     <h3>Students Data</h3>
                     <p>Join us Today!</p>
-                    <button>Get Started</button>
+                    <button id="updata">Get Started</button>
                 </div>
                 <div class="card">
                     <i class="fas fa-laptop-code"></i>
                     <h3>Staff Data</h3>
                     <p>Join us Today!</p>
-                    <button>Get Started</button>
+                    <button id="stdata">Get Started</button>
                 </div>
                 <div class="card">
                     <i class="fas fa-laptop-code"></i>
@@ -110,6 +110,7 @@
         </section>
     </div>
     <script>
+     
         let studentsDataTable = () => {
           let domFrag = new DocumentFragment();
           let tbody = document.createElement("tbody");
@@ -139,7 +140,7 @@
               document.querySelector("#table").appendChild(domFrag);
             });
         };
-        studentsDataTable();
+        
       </script>
       <script>
         let staffData = () => {
@@ -170,7 +171,13 @@
               document.querySelector("#tableStaff").appendChild(staffFrag);
             });
         };
+        document.getElementById("stdata").addEventListener("click", function() {
         staffData();
+});
+document.getElementById("updata").addEventListener("click", function() {
+  studentsDataTable();
+});
+
       </script>
 </body>
 </html>
