--- a/src/frontend/students.html
+++ b/src/frontend/students.html
@@ -12,16 +12,21 @@
       <header>
         <h1>Students Login System</h1>
       </header>
-      <form action="/registerStudents" method="post" class="regStudents">
+      <form action="/registerStudents" method="post" class="regStudents" enctype="multipart/form-data">
         <label for="fname">First Name:</label>
         <input type="text" id="fname" name="fname" /><br />
         <label for="lname">Last Name</label>
         <input type="text" id="lname" name="lname" /><br />
         <label for="Cname">Class</label>
         <input type="text" id="Cname" name="Cname" /><br />
-        <label for="Agname">Age</label>
-        <input type="number" id="Agname" name="Agname" /><br />
-        <input type="file" id="myFile" name="filename" />
+        <label for="Agname">Date of Birth</label>  
+        <input type="date" id="Agname" name="Agname" /><br />
+        <label for="YearEnrolled">Year Enrolled</label> 
+        <input type="number" id="YearEnrolled" name="YearEnrolled" /><br />
+        <label for="password">PassWord</label> 
+        <input type="password" id="password" name="password" /><br />
+        <label for="passport">Passport</label> 
+        <input type="file" id="passport" name="passport" /> <br />
         <button type="submit">Submit</button>
       </form>
       <div class="next">
