--- a/src/frontend/students.html
+++ b/src/frontend/students.html
@@ -29,6 +29,9 @@
         <input type="file" id="passport" name="passport" /> <br />
         <button type="submit">Submit</button>
       </form>
+      <h3> I have an account?
+        <button onclick="window.location.href='StudentsLogin.html'">Login Here</button>
+    </h3>
       <div class="next">
         <button onclick="window.location.href='index.html'">Back</button>
       </div>
