--- a/src/frontend/StudentProfile.html
+++ b/src/frontend/StudentProfile.html
@@ -1,14 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
-    <title>Sudents Profile</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="container">
+      <nav>
+        <ul>
+          <li>
+            <a class="logo" href="#">
+              <img src="/img/logo1.png" alt="" />
+              <span class="nav-item">DashBoard</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-home"></i>
+              <span class="nav-item">Home</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-user"></i>
+              <span class="nav-item">Profile</span>
+            </a>
+          </li>
+          <li>
+            <a href="/totalStudents">
+              <i class="fas fa-chart-bar"></i>
+              <span class="nav-item">Analytics</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i class="fas fa-tasks"></i>
+              <span class="nav-item">Update</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <i class="fas fa-question-circle"></i>
+              <span class="nav-item">Help</span>
+            </a>
+          </li>
+          <li>
+            <a href="StudentsLogin.html" class="logout">
+              <i class="fas fa-sign-out-alt"></i>
+              <span class="nav-item">LogOut</span>
+            </a>
+          </li>
+          <li><a href=""></a></li>
+        </ul>
+      </nav>
+      <section class="profile">
+        <div class="main-top">
+          <h1>School DashBoard</h1>
+        </div>
+        <div id="table"></div>
+      </section>
+      <script>
+        let profile = () => {
+          let domFrag = new DocumentFragment();
+          let tbody = document.createElement("tbody");
+          let str = null;
+          let StudentsId = new URLSearchParams(window.location.search).get(
+            "id"
+          );
+          let fetchRes = fetch(`/getSpecStudent?StudentsId=${StudentsId}`);
+          fetchRes
+            .then((details) => details.json())
+            .then((data) => {
+              console.log(data);
+              str = `<div class="displayStudent" id = ${data.StudentsId}>
+                <div><img src = "${data.Passport}" width = "100" height = "100" class ="imgLogo"></div>
+                    <div class= "stu"> StudentsId: ${data.StudentsId}</div>
+                    <div class= "stu">First Name: ${data.FirstName}</div>
+                    <div class= "stu">Last Name: ${data.LastName}</div>
+                    <div class= "stu">Year_Enrolled: ${data.Year_Enrolled}</div>
+                    <div class= "stu">Date_of_Birth: ${data.Date_of_Birth}</div>
+                    
+                    </div>`;
+              tbody.innerHTML = str;
+              domFrag.appendChild(tbody);
+              document.querySelector("#table").appendChild(domFrag);
+            });
+        };
+        profile();
+      </script>
+    </div>
+  </body>
 </html>
