--- a/src/frontend/mainPanel.html
+++ b/src/frontend/mainPanel.html
@@ -28,9 +28,9 @@
                     <i class="fas fa-chart-bar"></i>  
                     <span class="nav-item">Analytics</span>
                 </a></li>
-                <li><a href="">
+                <li><a href="StaffUpdate.html">
                     <i class="fas fa-tasks"></i>  
-                    <span class="nav-item">Tasks</span>
+                    <span class="nav-item">Update</span>
                 </a></li>
                 
                 <li><a href="">
