updated the server, and added class and course

--- a/src/frontend/students.html
+++ b/src/frontend/students.html
@@ -17,8 +17,15 @@
         <input type="text" id="fname" name="fname" /><br />
         <label for="lname">Last Name</label>
         <input type="text" id="lname" name="lname" /><br />
-        <label for="Cname">Class</label>
-        <input type="text" id="Cname" name="Cname" /><br />
+        <label for="Cname">Classes</label>
+        <select id="Cname" name="Cname">
+            <option value="Jss1">Class 1</option>
+            <option value="Jss2">Class 2</option>
+            <option value="Jss3">Class 3</option>
+            <option value="Sss4">Class 4</option>
+            <option value="Sss5">Class 5</option>
+            <option value="Sss6">Class 6</option>
+          </select>
         <label for="Agname">Date of Birth</label>  
         <input type="date" id="Agname" name="Agname" /><br />
         <label for="YearEnrolled">Year Enrolled</label> 
