--- a/src/frontend/mainPanel.html
+++ b/src/frontend/mainPanel.html
@@ -28,6 +28,14 @@
                     <i class="fas fa-chart-bar"></i>  
                     <span class="nav-item">Analytics</span>
                 </a></li>
+                <li><a href="Course.html">
+                    <i class="fas fa-chart-bar"></i>  
+                    <span class="nav-item">Courses</span>
+                </a></li>
+                <li><a href="classes.html">
+                    <i class="fas fa-chart-bar"></i>  
+                    <span class="nav-item">Classes</span>
+                </a></li>
                 <li><a href="StaffUpdate.html">
                     <i class="fas fa-tasks"></i>  
                     <span class="nav-item">Update</span>
@@ -72,7 +80,7 @@
                     <i class="fas fa-laptop-code"></i>
                     <h3>Courses</h3>
                     <p>Our Courses!</p>
-                    <button>Get Started</button>
+                    <button id = "stCldata">Get Started</button>
                 </div>
             </div>
             <section class="main-course">
@@ -104,6 +112,16 @@
                             <th>Username</th>
                             <th>State Of Origin</th>
                             <th>Image</th>
+                          </tr>
+                        </thead>
+                      </table>
+                </div>
+                <div class="course-box">
+                      <table id="tableStudentsStaff">
+                        <thead>
+                          <tr>
+                            <th>Students Id</th>
+                            <th>Class ID</th>
                           </tr>
                         </thead>
                       </table>
@@ -181,7 +199,32 @@
 document.getElementById("updata").addEventListener("click", function() {
   studentsDataTable();
 });
+      </script>
+      <script>
+        let getCourses = () =>{
+          let gtCourses = new DocumentFragment;
+          let tbody = document.createElement("tbody");
+          let st = null;
 
+          let fetchSt = fetch("/getClassStudents");
+          fetchSt
+            .then((Details) => Details.json())
+            .then(({data}) => {
+              console.log(data);
+              st = data.map((list, index) => 
+              `<tr id = ${index}>
+              <td>${list.StudentsId}</td>
+              <td>${list.ClassId}</td>
+            </tr>`
+            ).join(" ")
+            tbody.innerHTML = st;
+            gtCourses.appendChild(tbody)
+            document.querySelector("#tableStudentsStaff").appendChild(gtCourses)
+            } );
+        }
+        document.getElementById("stCldata").addEventListener("click", function() {
+          getCourses();
+});
       </script>
 </body>
 </html>
