--- a/src/frontend/StudentProfile.html
+++ b/src/frontend/StudentProfile.html
@@ -34,22 +34,22 @@
             </a>
           </li>
           <li>
-            <a href="/totalStudents">
+            <a href="/">
               <i class="fas fa-chart-bar"></i>
-              <span class="nav-item">Analytics</span>
+              <span class="nav-item">See Classes</span>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="EnrollClass.html">
               <i class="fas fa-tasks"></i>
-              <span class="nav-item">Update</span>
+              <span class="nav-item">Enroll Class</span>
             </a>
           </li>
 
           <li>
             <a href="">
               <i class="fas fa-question-circle"></i>
-              <span class="nav-item">Help</span>
+              <span class="nav-item">help</span>
             </a>
           </li>
           <li>
