--- a/src/frontend/StudentsLogin.html
+++ b/src/frontend/StudentsLogin.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>School Portal</title>
-    <script src="./app.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css"/>
   </head>
   <body>
 <div class="login">
     <header>
         <h1>Students Login</h1></header>
     <form action="/StudentsLogin" method="post">
-      <label htmlFor="Year_Enrolled"> Year Enrolled</label>
-      <input type="text" id="Year_Enrolled" name="Year_Enrolled" required/>
+      <label htmlFor="Year_Enrolled"> Reg Number</label>
+      <input type="text" id="userId" name="userId" required/>
       <br />
       <label htmlFor="password">PassWord</label>
       <input type="password" id="password" name="Password" required/>
