--- a/src/frontend/Course.html
+++ b/src/frontend/Course.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>School Portal</title>
-    <script src="/app.js"></script>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css"/>
   </headntent="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <form action="/RegisterCourse" method="post" class="regStudents">
-        <h3>Choose Courses</h3>
+        <h3>Create Courses</h3>
         <label for="courses">Courses</label>
         <input type="text" id="CourseName" name="CourseName" /><br />
         <button type="submit">Submit</button>
