--- a/src/frontend/classes.html
+++ b/src/frontend/classes.html
@@ -5,20 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>School Portal</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css"/>
   </headntent="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <form action="/RegisterClass" method="post" class="regStudents">
         <h3>Choose Class</h3>
         <label for="ClassName">Classes</label>
-        <select id="ClassName" name="ClassName">
-            <option value="Jss1">Class 1</option>
-            <option value="Jss2">Class 2</option>
-            <option value="Jss3">Class 3</option>
-            <option value="Sss4">Class 4</option>
-            <option value="Sss5">Class 5</option>
-            <option value="Sss6">Class 6</option>
-          </select>
+        <input type="text" id="ClassName" name= "ClassName" /><br />
         <label for="StaffID">StaffID</label>
         <input type="text" id="StaffID" name="StaffID" /><br />
         <label for="CourseID">Course Name</label>
