--- a/src/frontend/students.html
+++ b/src/frontend/students.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>School Portal</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css"/>
   </head>
   <div class="login">
     <body>
@@ -17,15 +18,6 @@
         <input type="text" id="fname" name="fname" /><br />
         <label for="lname">Last Name</label>
         <input type="text" id="lname" name="lname" /><br />
-        <label for="Cname">Classes</label>
-        <select id="Cname" name="Cname">
-            <option value="Jss1">Class 1</option>
-            <option value="Jss2">Class 2</option>
-            <option value="Jss3">Class 3</option>
-            <option value="Sss4">Class 4</option>
-            <option value="Sss5">Class 5</option>
-            <option value="Sss6">Class 6</option>
-          </select>
         <label for="Agname">Date of Birth</label>  
         <input type="date" id="Agname" name="Agname" /><br />
         <label for="YearEnrolled">Year Enrolled</label> 
@@ -44,4 +36,18 @@
       </div>
     </body>
   </div>
+  <script>
+    let fetchCourse = fetch("/getClasses");
+    let course = null
+    fetchCourse
+    .then((details) => details.json())
+    .then(({rows}) => {
+      console.log(rows)
+      course = rows.map((list, index) =>
+      `<option value="${list.ClassId}">${list.ClassName}</option>`
+      )
+      .join(" ")
+        document.querySelector("#ClassID").innerHTML = course;
+    })
+  </script>
 </html>
