--- a/src/frontend/mainPanel.html
+++ b/src/frontend/mainPanel.html
@@ -40,6 +40,10 @@
                     <i class="fas fa-tasks"></i>  
                     <span class="nav-item">Update</span>
                 </a></li>
+                <li><a href="StaffDelete.html">
+                    <i class="fas fa-tasks"></i>  
+                    <span class="nav-item">Delete</span>
+                </a></li>
                 
                 <li><a href="">
                     <i class="fas fa-question-circle"></i>  
