Added Table to display Classe with all the Student

--- a/src/frontend/StudentsLogin.html
+++ b/src/frontend/StudentsLogin.html
@@ -20,6 +20,7 @@
       <input type="password" id="password" name="Password" required/>
       <button type="submit">Submit</button>
     </form>
+      <button onclick="window.location.href='forgetPassword.html'">Forgot Password?</button>
     <section>
     <h3> Are you a Staff?
         <button onclick="window.location.href='index.html'">Login Here</button>
