Forgot password fixed

--- a/src/frontend/forgetPassword.html
+++ b/src/frontend/forgetPassword.html
@@ -10,7 +10,8 @@
   </headntent="width=device-width, initial-scale=1.0">
     <title>Update Page</title>
     <div class="Update">
-      <div class="update-grid"> <form action="/updatePassword" method="post" class="regStudents" enctype="multipart/form-data" >
+      <div class="update-grid"> 
+        <form action="/updatePassword" method="post" class="regStudents" >
         <h3>Input New PassWord</h3>
         <label for="StudentsId">Students ID</label>
         <input type="text" id="StudentsId" name="StudentsId"/><br />
